--- a/css/style.css
+++ b/css/style.css
@@ -832,6 +832,10 @@ video {
   margin-left: 0.28rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -888,6 +892,22 @@ video {
   height: 3rem;
 }
 
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[520px\] {
+  height: 520px;
+}
+
+.h-\[560px\] {
+  height: 560px;
+}
+
+.max-h-\[80vh\] {
+  max-height: 80vh;
+}
+
 .max-h-full {
   max-height: 100%;
 }
@@ -896,12 +916,16 @@ video {
   max-height: 98vh;
 }
 
-.max-h-\[80vh\] {
-  max-height: 80vh;
-}
-
 .max-h-\[95vh\] {
   max-height: 95vh;
+}
+
+.max-h-\[90vh\] {
+  max-height: 90vh;
+}
+
+.max-h-\[99vh\] {
+  max-height: 99vh;
 }
 
 .w-\[7rem\] {
@@ -914,6 +938,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[70vw\] {
+  width: 70vw;
 }
 
 .w-\[85vw\] {
@@ -958,14 +986,6 @@ video {
 
 .w-24 {
   width: 6rem;
-}
-
-.w-\[50vw\] {
-  width: 50vw;
-}
-
-.w-\[70vw\] {
-  width: 70vw;
 }
 
 .max-w-sm {
@@ -1160,6 +1180,10 @@ video {
   overflow-y: hidden;
 }
 
+.overflow-y-visible {
+  overflow-y: visible;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1210,6 +1234,10 @@ video {
 
 .border-\[3px\] {
   border-width: 3px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-y-2 {
@@ -1557,6 +1585,11 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-emerald-600 {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
+}
+
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
@@ -1597,11 +1630,6 @@ video {
   color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 
-.text-emerald-600 {
-  --tw-text-opacity: 1;
-  color: rgb(5 150 105 / var(--tw-text-opacity));
-}
-
 .opacity-0 {
   opacity: 0;
 }
@@ -1624,12 +1652,20 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline-4 {
+  outline-width: 4px;
+}
+
 .outline-blue-600 {
   outline-color: #2563eb;
 }
 
 .outline-emerald-700 {
   outline-color: #047857;
+}
+
+.outline-black {
+  outline-color: #000;
 }
 
 .backdrop-blur-sm {
@@ -1902,6 +1938,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.hover\:border-emerald-600:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(5 150 105 / var(--tw-border-opacity));
+}
+
 .hover\:bg-emerald-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
@@ -1922,10 +1963,30 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:text-emerald-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity));
+}
+
+.hover\:text-red-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .hover\:shadow-xl:hover {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-2xl:hover {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:outline-emerald-600:hover {
+  outline-color: #059669;
 }
 
 .focus\:outline-emerald-600:focus {
@@ -2051,6 +2112,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.dark .dark\:hover\:border-emerald-600:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(5 150 105 / var(--tw-border-opacity));
+}
+
 .dark .dark\:hover\:bg-neutral-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
@@ -2073,6 +2139,14 @@ video {
 @media (min-width: 368px) {
   .xs\:h-\[178px\] {
     height: 178px;
+  }
+
+  .xs\:min-h-\[90vh\] {
+    min-height: 90vh;
+  }
+
+  .xs\:min-h-\[99vh\] {
+    min-height: 99vh;
   }
 
   .xs\:w-\[80vw\] {
@@ -2114,6 +2188,22 @@ video {
 
   .xmd\:h-\[375px\] {
     height: 375px;
+  }
+
+  .xmd\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .xmd\:h-\[530px\] {
+    height: 530px;
+  }
+
+  .xmd\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .xmd\:h-\[420px\] {
+    height: 420px;
   }
 
   .xmd\:flex-row {
@@ -2158,6 +2248,10 @@ video {
 
   .sm\:max-h-\[95vh\] {
     max-height: 95vh;
+  }
+
+  .sm\:min-h-\[90vh\] {
+    min-height: 90vh;
   }
 
   .sm\:max-w-2xl {
